tests/compiler/function_generalization_1.kk.out
error: Type mismatch
 --> tests/compiler/function_generalization_1.kk:1:17
  |
...
3 | let y: number = x
  |                 ^
  |

+---------------+-------------+
| EXPECTED TYPE | ACTUAL TYPE |
+---------------+-------------+
| number        | > string    |
+---------------+-------------+
