tests/compiler/function_generalization_1.kk
let identity = \x => x
let x = 'hello'.identity
let y: number = x
